--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Affordable pricing for student freelancers. Starter ₹499, Pro ₹999, Business ₹1999. No hidden fees.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="stylepricing.css">
+  <link rel="stylesheet" href="styleclient.css">
 </head>
 <body>
   <!-- Header -->
