--- a/pricings.html
+++ b/pricings.html
@@ -20,12 +20,12 @@
       <nav>
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
-          <li><a href="for-client.html">For Clients</a></li>
-          <li><a href="pricing.html" class="active">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="#" id="logout">Log Out</a></li>
+          <li><a href="index.html">For Students</a></li>
+          <li><a href="index.html">For Clients</a></li>
+          <li><a href="pricings.html" class="active">Pricing</a></li>
+          <li><a href="contactme.html">Contact</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
       </nav>
     </div>
