--- a/index.html
+++ b/index.html
@@ -3,79 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Linkr - Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Login | Skill Linkr - Student Freelance Platform</title>
+    <meta name="description" content="Secure login to Skill Linkr. Access student freelance opportunities and client projects.">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* Temporary Basic Styling for Login Page (Ideally in style.css) */
-        .login-container {
-            max-width: 400px;
-            margin: 100px auto;
-            padding: 30px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-        .login-container h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-        .login-container input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .login-container .btn-primary {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        .login-container .btn-primary:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
- <header>
-  <div class="menu-toggle">&#9776; </div>
-      <div class="container">
-  <div class="logo">
-  <img src="_Skill Linkr Personal Logo (1).png" alt="Logo">
-</div>
-      <nav>
+<body class="login-body">
+  <!-- Background Animation -->
+  <div class="background-animation">
+    <div class="floating-shapes">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+      <div class="shape shape-4"></div>
+    </div>
+  </div>
+
+  <!-- Header -->
+  <header class="header login-header">
+    <div class="container">
+      <div class="logo">
+        <img src="_Skill Linkr Personal Logo (1).png" alt="Skill Linkr Logo">
+      </div>
+      <nav class="nav">
         <ul>
-          <li><a href="pricings.html">Pricing</a></li>
-          <li><a href="contactme.html">Contact</a></li>
-          <li><a href="aboutus.html">About Us</a></li> 
+          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </div>
-</header>
+  </header>
 
+  <!-- Main Login Container -->
+  <main class="login-main">
     <div class="login-container">
-        <h2>Login to Skill Linkr</h2>
-        <form action="dashboard.html" method="GET"> 
-             <input type="text" name="username" placeholder="Enter Your Name" required>
-             <input type="text" name="password" placeholder="Enter Your Password" required>
-            <button type="submit" class="btn-primary">Login Now</button>
-        </form>
-    </div>
-    
-    <footer>
-        <div class="footer-bottom">
-            <p>© 2025 Skill Linkr — All rights reserved.</p>
+      <!-- Brand Section -->
+      <div class="login-brand">
+        <div class="brand-icon">
+          <i class="fas fa-link"></i>
         </div>
-    </footer>
+        <h1>Skill <span>Linkr</span></h1>
+        <p>Welcome back! Access your dashboard to manage projects and earnings.</p>
+      </div>
+
+      <!-- Login Form -->
+      <form id="loginForm" class="login-form">
+        <div class="form-group">
+          <div class="input-wrapper">
+            <i class="fas fa-user input-icon"></i>
+            <input type="text" id="username" name="username" placeholder="Username or Email" required autocomplete="username">
+            <i class="fas fa-check-circle input-success"></i>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="input-wrapper">
+            <i class="fas fa-lock input-icon"></i>
+            <input type="password" id="password" name="password" placeholder="Password" required autocomplete="current-password">
+            <i class="fas fa-eye toggle-password"></i>
+            <i class="fas fa-check-circle input-success"></i>
+          </div>
+        </div>
+
+        <div class="form-options">
+          <label class="remember-me">
+            <input type="checkbox" id="remember">
+            <span class="checkmark"></span>
+            Remember me
+          </label>
+          <a href="#" class="forgot-password">Forgot Password?</a>
+        </div>
+
+        <button type="submit" class="login-btn">
+          <span class="btn-text">
+            <i class="fas fa-sign-in-alt"></i>
+            Sign In
+          </span>
+          <span class="btn-loading">
+            <i class="fas fa-spinner fa-spin"></i>
+            Signing in...
+          </span>
+        </button>
+      </form>
+
+      <!-- Divider -->
+      <div class="divider">
+        <span>or continue with</span>
+      </div>
+
+      <!-- Social Login -->
+      <div class="social-login">
+        <button type="button" class="social-btn google">
+          <i class="fab fa-google"></i>
+          Google
+        </button>
+        <button type="button" class="social-btn github">
+          <i class="fab fa-github"></i>
+          GitHub
+        </button>
+      </div>
+
+      <!-- Register Link -->
+      <div class="register-link">
+        <p>Don't have an account? <a href="register.html">Create one now</a></p>
+      </div>
+    </div>
+
+    <!-- Demo Credentials -->
+    <div class="demo-info">
+      <div class="demo-card">
+        <i class="fas fa-info-circle"></i>
+        <h4>Demo Login</h4>
+        <p><strong>Username:</strong> demo@skilllinkr.com</p>
+        <p><strong>Password:</strong> demo123</p>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="login-footer">
+    <div class="container">
+      <p>© 2026 Skill Linkr — Secure & Trusted by 500+ Students | <a href="privacy.html">Privacy Policy</a></p>
+    </div>
+  </footer>
+
+  <script src="login-script.js"></script>
 </body>
 </html>
+
