--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Secure login to Skill Linkr. Access student freelance opportunities and client projects.">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login-style.css">
 </head>
 <body class="login-body">
   <!-- Background Animation -->
