--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
       <nav class="nav">
         <ul>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="pricings.html">Pricing</a></li>
+          <li><a href="contactme.html">Contact</a></li>
+          <li><a href="aboutus.html">About</a></li>
         </ul>
       </nav>
     </div>
