--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="index.html">Log Out</a></li>
+          <li><a href="login.html">Log In</a></li>
         </ul>
       </nav>
     </div>
