--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
       </div>
       <nav class="nav">
         <ul id="nav-menu">
-          <li><a href="dashboard.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="for-students.html">For Students</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
-          <li><a href="index.html" id="logout">Log Out</a></li>
+          <li><a href="login.html" id="log In">Log Out</a></li>
         </ul>
       </nav>
     </div>
