--- a/contactme.html
+++ b/contactme.html
@@ -21,13 +21,13 @@
       </div>
       <nav class="nav">
         <ul id="nav-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">For Students</a></li>
-          <li><a href="index.html">For Clients</a></li>
+          <li><a href="login.html">Home</a></li>
+          <li><a href="login.html">For Students</a></li>
+          <li><a href="login.html">For Clients</a></li>
           <li><a href="pricings.html">Pricing</a></li>
           <li><a href="contactme.html" class="active">Contact</a></li>
           <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="index.html" id="logout">Log Out</a></li>
+          <li><a href="login.html" id="logout">Log In</a></li>
         </ul>
       </nav>
     </div>
