--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
           <li><a href="pricing.html" class="active">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="#" id="logout">Log Out</a></li>
+          <li><a href="login.html">Log In</a></li>
         </ul>
       </nav>
     </div>
