--- a/pricings.html
+++ b/pricings.html
@@ -19,13 +19,13 @@
       <div class="menu-toggle"><i class="fas fa-bars"></i></div>
       <nav>
         <ul id="nav-menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">For Students</a></li>
-          <li><a href="index.html">For Clients</a></li>
+          <li><a href="login.html">Home</a></li>
+          <li><a href="login.html">For Students</a></li>
+          <li><a href=login.html">For Clients</a></li>
           <li><a href="pricings.html" class="active">Pricing</a></li>
           <li><a href="contactme.html">Contact</a></li>
           <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="index.html">Log Out</a></li>
+          <li><a href="login.html">Log In</a></li>
         </ul>
       </nav>
     </div>
