--- a/pricing.html
+++ b/pricing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Transparent Pricing | Skill Linkr</title>
+  <title> Pricing | Skill Linkr</title>
   <meta name="description" content="Affordable pricing for student freelancers. Starter ₹499, Pro ₹999, Business ₹1999. No hidden fees.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
