--- a/pricings.html
+++ b/pricings.html
@@ -21,7 +21,7 @@
         <ul id="nav-menu">
           <li><a href="login.html">Home</a></li>
           <li><a href="login.html">For Students</a></li>
-          <li><a href=login.html">For Clients</a></li>
+          <li><a href="login.html">For Clients</a></li>
           <li><a href="pricings.html" class="active">Pricing</a></li>
           <li><a href="contactme.html">Contact</a></li>
           <li><a href="aboutus.html">About Us</a></li>
