--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="founder-container">
         <div class="founder-image">
-          <img src="ADARSH1.jpg" alt="Adarsh Shukla - Founder of Skill Linkr" loading="lazy">
+          <img src="adarshshukla.png" alt="Adarsh Shukla - Founder of Skill Linkr" loading="lazy">
           <div class="image-overlay">
             <div class="overlay-content">
               <i class="fab fa-instagram"></i>
