--- a/aboutus.html
+++ b/aboutus.html
@@ -143,28 +143,28 @@
           <div class="stat-icon">
             <i class="fas fa-users"></i>
           </div>
-          <div class="stat-number" data-target="500">0</div>
+          <div class="stat-number" data-target="500">10+</div>
           <div class="stat-label">Active Students</div>
         </div>
         <div class="stat-card">
           <div class="stat-icon">
             <i class="fas fa-briefcase"></i>
           </div>
-          <div class="stat-number" data-target="250">0</div>
+          <div class="stat-number" data-target="250">10+</div>
           <div class="stat-label">Projects Completed</div>
         </div>
         <div class="stat-card">
           <div class="stat-icon">
             <i class="fas fa-university"></i>
           </div>
-          <div class="stat-number" data-target="50">0</div>
+          <div class="stat-number" data-target="50">10+</div>
           <div class="stat-label">Top Colleges</div>
         </div>
         <div class="stat-card">
           <div class="stat-icon">
             <i class="fas fa-chart-line"></i>
           </div>
-          <div class="stat-number" data-target="98">0</div>
+          <div class="stat-number" data-target="98">90%</div>
           <div class="stat-label">% Success Rate</div>
         </div>
       </div>
