--- a/aboutus.html
+++ b/aboutus.html
@@ -52,7 +52,7 @@
             <div class="stat-label">Happy Clients</div>
           </div>
           <div class="stat">
-            <div class="stat-number">₹50L+</div>
+            <div class="stat-number">₹10K+</div>
             <div class="stat-label">Paid to Students</div>
           </div>
           <div class="stat">
