--- a/about.html
+++ b/about.html
@@ -48,11 +48,11 @@
         </p>
         <div class="hero-stats">
           <div class="stat">
-            <div class="stat-number">500+</div>
+            <div class="stat-number">10+</div>
             <div class="stat-label">Happy Clients</div>
           </div>
           <div class="stat">
-            <div class="stat-number">₹50L+</div>
+            <div class="stat-number">₹10K+</div>
             <div class="stat-label">Paid to Students</div>
           </div>
           <div class="stat">
