--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         <div class="card">
           <i class="fa fa-upload fa-2x"></i>
           <h4>1. Post Project</h4>
-          <p>Clients post detailed project briefs with budget and timeline. Students see your requirements instantly.</p>
+          <p>Clients post detailed project briefs with budget & timeline. Students see your requirements instantly.</p>
         </div>
         <div class="card">
           <i class="fa fa-users fa-2x"></i>
           <h4>2. Students Apply</h4>
-          <p>Verified students submit proposals with portfolios, rates, and timelines tailored to your project.</p>
+          <p>Verified students submit proposals with portfolios, rates & timelines tailored to your project.</p>
         </div>
         <div class="card">
           <i class="fa fa-handshake fa-2x"></i>
           <h4>3. Hire & Pay Securely</h4>
-          <p>Review proposals, hire your choice, collaborate in-platform, and release payment only after satisfaction.</p>
+          <p>Review proposals, hire your choice, collaborate in-platform & release payment only after satisfaction.</p>
         </div>
       </div>
     </div>
@@ -74,17 +74,17 @@
         <div class="card">
           <i class="fa fa-user-graduate fa-2x"></i>
           <h4>Create Profile</h4>
-          <p>Build a stunning portfolio showcasing skills, projects, certifications, and availability.</p>
+          <p>Build a stunning portfolio showcasing skills, projects, certifications & availability.</p>
         </div>
         <div class="card">
           <i class="fa fa-briefcase fa-2x"></i>
           <h4>Browse Projects</h4>
-          <p>Discover relevant freelance opportunities matching your skills and experience level.</p>
+          <p>Discover relevant freelance opportunities matching your skills & experience level.</p>
         </div>
         <div class="card">
           <i class="fa fa-medal fa-2x"></i>
           <h4>Get Verified & Featured</h4>
-          <p>Complete verification, earn badges, and get featured to attract more clients.</p>
+          <p>Complete verification, earn badges & get featured to attract more clients.</p>
         </div>
       </div>
     </div>
@@ -98,17 +98,17 @@
         <div class="card">
           <i class="fa fa-edit fa-2x"></i>
           <h4>Post Projects Free</h4>
-          <p>Create detailed briefs with budget, timeline, and requirements in minutes.</p>
+          <p>Create detailed briefs with budget, timeline & requirements in minutes.</p>
         </div>
         <div class="card">
           <i class="fa fa-search fa-2x"></i>
           <h4>Review Top Talent</h4>
-          <p>Access student portfolios, ratings, reviews, and proposals to find perfect matches.</p>
+          <p>Access student portfolios, ratings, reviews & proposals to find perfect matches.</p>
         </div>
         <div class="card">
           <i class="fa fa-shield-alt fa-2x"></i>
           <h4>Secure Payments</h4>
-          <p>Funds held securely until project completion and client satisfaction.</p>
+          <p>Funds held securely until project completion & client satisfaction.</p>
         </div>
       </div>
     </div>
@@ -128,13 +128,13 @@
         <div class="card popular">
           <h4>Student Pro</h4>
           <p>₹99 / month</p>
-          <p>Unlimited applications, featured profile, priority support</p>
+          <p>Unlimited applications, featured profile & priority support</p>
           <button class="btn-primary">Choose Pro</button>
         </div>
         <div class="card">
           <h4>Client Pro</h4>
           <p>Pay Per Project</p>
-          <p>Unlimited postings, advanced matching, dedicated support</p>
+          <p>Unlimited postings, advanced matching & dedicated support</p>
           <button class="btn-primary">Post Project</button>
         </div>
       </div>
