--- a/for-students.html
+++ b/for-students.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>Grow Your Freelance Career as a Student</h1>
-        <p>Join 5000+ students earning real money while building professional portfolios and gaining industry experience.</p>
+        <p>Join 5000+ students earning real money while building professional portfolios & gaining industry experience.</p>
         <div class="hero-buttons">
           <a href="#signup" class="btn-primary">Start Freelancing Free</a>
           <a href="#features" class="btn-secondary">See How It Works</a>
@@ -43,11 +43,11 @@
       </div>
       <div class="hero-stats">
         <div class="stat">
-          <h3>₹5L+</h3>
+          <h3>₹10K+</h3>
           <p>Earned by Students</p>
         </div>
         <div class="stat">
-          <h3>2K+</h3>
+          <h3>10+</h3>
           <p>Projects Completed</p>
         </div>
         <div class="stat">
