--- a/for-client.html
+++ b/for-client.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Clients | Skill Linkr</title>
-  <meta name="description" content="                                         Hire talented student freelancers at affordable rates. Fast delivery, quality work, secure payments.">
+  <meta name="description" content="Hire talented student freelancers at affordable rates. Fast delivery, quality work, secure payments.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styleclient.css">
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>Hire Top Student Talent at 50% Lower Rates</h1>
-        <p>Join 1000+ businesses getting professional work from IIT/NIT students at startup-friendly prices.</p>
+        <p>Join 10+ businesses getting professional work from Top College students at startup-friendly prices.</p>
         <div class="hero-buttons">
           <a href="#post-project" class="btn-primary">Post Project Free</a>
           <a href="#features" class="btn-secondary">See How It Works</a>
@@ -56,7 +56,7 @@
           <p>Client Satisfaction</p>
         </div>
         <div class="stat">
-          <h3>2000+</h3>
+          <h3>10+</h3>
           <p>Projects Delivered</p>
         </div>
       </div>
@@ -66,7 +66,7 @@
   <!-- Features Section -->
   <section id="features" class="features">
     <div class="container">
-      <h2>Why 1000+ Businesses Choose Skill Linkr</h2>
+      <h2>Why 10+ Businesses Choose Skill Linkr</h2>
       <div class="cards">
         <div class="card feature-card">
           <div class="card-icon">
