--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
-          <li><a href="login.html" id="log In">Log Out</a></li>
+          <li><a href="login.html" id="log In">Log In</a></li>
         </ul>
       </nav>
     </div>
