--- a/pricing.html
+++ b/pricing.html
@@ -35,7 +35,7 @@
   <section id="hero" class="hero-pricing">
     <div class="container">
       <div class="hero-content">
-        <h1>Simple, Transparent Pricing</h1>
+        <h1>Simple & Transparent Pricing</h1>
         <p class="hero-subtitle">Choose the perfect plan for your project. No hidden fees. Pay only after satisfaction. Cancel anytime.</p>
         <div class="pricing-switcher">
           <div class="switcher-option active" data-plan="monthly">
