--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us | Skill Linkr - Empowering Student Talent</title>
-  <meta name="description" content="Learn about Skill Linkr's mission to empower students through freelancing opportunities and connect businesses with affordable talent.">
+  <meta name="description" content="Learn about Skill Linkr's mission to empower students through freelancing opportunities & connect businesses with affordable talent.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styleabout.css">
@@ -27,7 +27,7 @@
           <li><a href="pricings.html">Pricing</a></li>
           <li><a href="contactme.html">Contact</a></li>
           <li><a href="aboutus.html" class="active">About Us</a></li>
-          <li><a href="login.html" id="logout">Log In</a></li>
+          <li><a href="login.html" id="login">Log In</a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +43,7 @@
         </div>
         <h1>About <span>Skill Linkr</span></h1>
         <p class="hero-subtitle">
-          Empowering students to earn, learn, and grow while connecting businesses 
+          Empowering students to earn, learn & grow while connecting businesses 
           with affordable, quality talent from India's top colleges. 
         </p>
         <div class="hero-stats">
