--- a/for-client.html
+++ b/for-client.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Clients | Skill Linkr</title>
-  <meta name="description" content="Hire talented student freelancers at affordable rates. Fast delivery, quality work, secure payments.">
+  <meta name="description" content="Hire talented student freelancers at affordable rates. Fast delivery, quality work & secure payments.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styleclient.css">
@@ -73,7 +73,7 @@
             <i class="fas fa-bolt"></i>
           </div>
           <h3>Lightning Fast Delivery</h3>
-          <p>Students deliver 2-3x faster than agencies. Perfect for tight deadlines and urgent projects.</p>
+          <p>Students deliver 2-3x faster than agencies. Perfect for tight deadlines & urgent projects.</p>
         </div>
         <div class="card feature-card">
           <div class="card-icon">
@@ -87,7 +87,7 @@
             <i class="fas fa-brain"></i>
           </div>
           <h3>Fresh Creative Ideas</h3>
-          <p>India's brightest IIT/NIT students bring innovative solutions and modern approaches.</p>
+          <p>India's brightest IIT/NIT students bring innovative solutions & modern approaches.</p>
         </div>
         <div class="card feature-card">
           <div class="card-icon">
@@ -153,7 +153,7 @@
         </div>
         <div class="testimonial-card">
           <div class="stars">★★★★★</div>
-          <p>"Mobile app prototype in 3 days for ₹18K. Student from NIT was professional and delivered early."</p>
+          <p>"Mobile app prototype in 3 days for ₹18K. Student from NIT was professional & delivered early."</p>
           <div class="author">
             <img src="https://via.placeholder.com/50x50/4facfe/fff?text=VK" alt="Vikram K">
             <div>
