--- a/for-students.html
+++ b/for-students.html
@@ -61,7 +61,7 @@
   <!-- Features Section -->
   <section id="features" class="features">
     <div class="container">
-      <h2>Why 5000+ Students Choose Skill Linkr</h2>
+      <h2>Why 100+ Students Choose Skill Linkr</h2>
       <div class="cards">
         <div class="card feature-card">
           <div class="card-icon">
@@ -89,7 +89,7 @@
             <i class="fas fa-shield-alt"></i>
           </div>
           <h3>Secure Payments</h3>
-          <p>Get paid securely after client approval. No risk, guaranteed payment system.</p>
+          <p>Get paid securely after client approval. No risk & guaranteed payment system.</p>
         </div>
       </div>
     </div>
@@ -103,17 +103,17 @@
         <div class="step">
           <div class="step-number">1</div>
           <h3>Create Profile</h3>
-          <p>Sign up free and build your student profile with skills, projects, and availability.</p>
+          <p>Sign up free and build your student profile with skills, projects & availability.</p>
         </div>
         <div class="step">
           <div class="step-number">2</div>
           <h3>Browse Projects</h3>
-          <p>Find projects matching your skills. Submit proposals with your rates and timeline.</p>
+          <p>Find projects matching your skills. Submit proposals with your rates & timeline.</p>
         </div>
         <div class="step">
           <div class="step-number">3</div>
           <h3>Get Hired & Paid</h3>
-          <p>Complete work, get client approval, and receive secure payment instantly.</p>
+          <p>Complete work, get client approval & receive secure payment instantly.</p>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
       <div class="testimonial-grid">
         <div class="testimonial-card">
           <div class="stars">★★★★★</div>
-          <p>"Earned ₹25,000 in 2 months while studying! Got real projects and portfolio samples."</p>
+          <p>"Earned ₹25,000 in 2 months while studying! Got real projects & portfolio samples."</p>
           <div class="author">
             <img src="https://via.placeholder.com/50x50/667eea/fff?text=AS" alt="Aarav S">
             <div>
