--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
   <header class="header login-header">
     <div class="container">
       <div class="logo">
-        <img src="Skill Linkr Personal Logo.png" alt="Skill Linkr Logo">
+        <img src="_Skill Linkr Personal Logo (1).png" alt="Skill Linkr Logo">
       </div>
       <nav class="nav">
         <ul>
