--- a/pricings.html
+++ b/pricings.html
@@ -114,7 +114,7 @@
             </div>
           </div>
           <ul class="features-list">
-            <li><i class="fas fa-check"></i> Experienced IIT/NIT Students</li>
+            <li><i class="fas fa-check"></i> Experienced Students frpm Top Colleges</li>
             <li><i class="fas fa-check"></i> Priority Project Matching</li>
             <li><i class="fas fa-check"></i> Fast Delivery (1-3 days)</li>
             <li><i class="fas fa-check"></i> 24/7 Priority Support</li>
