--- a/for-client.html
+++ b/for-client.html
@@ -87,7 +87,7 @@
             <i class="fas fa-brain"></i>
           </div>
           <h3>Fresh Creative Ideas</h3>
-          <p>India's brightest IIT/NIT students bring innovative solutions & modern approaches.</p>
+          <p>India's brightest student freelancers bring innovative solutions & modern approaches.</p>
         </div>
         <div class="card feature-card">
           <div class="card-icon">
@@ -113,7 +113,7 @@
         <div class="step">
           <div class="step-number">2</div>
           <h3>Review Proposals</h3>
-          <p>Get proposals from verified IIT/NIT students with portfolios, rates & timelines.</p>
+          <p>Get proposals from verified top college students with portfolios, rates & timelines.</p>
         </div>
         <div class="step">
           <div class="step-number">3</div>
