--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
           <i class="fas fa-link"></i>
         </div>
         <h1>Skill <span>Linkr</span></h1>
-        <p>Welcome back! Access your dashboard to manage projects and earnings.</p>
+        <p>Welcome back to Skill Linkr! Access your dashboard to manage projects and earnings.</p>
       </div>
 
       <!-- Login Form -->
