--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <div class="story-points">
             <div class="story-point">
               <div class="point-number">01</div>
-              <p>Students struggle to find freelance work despite having High-level skills</p>
+              <p>Student Freelancers struggle to find freelance work despite having High-level skills</p>
             </div>
             <div class="story-point">
               <div class="point-number">02</div>
