--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
     <div class="container">
       <div class="hero-content">
         <h1>Let's Connect</h1>
-        <p class="hero-subtitle">Ready to hire top student talent or have questions? We're here to help!</p>
+        <p class="hero-subtitle">Ready to hire top student freelancer talent or have questions? We're here to help!</p>
         <div class="hero-stats">
           <div class="stat">
             <i class="fas fa-users"></i>
-            <span>500+</span>
+            <span>10+</span>
             <p>Happy Clients</p>
           </div>
           <div class="stat">
