--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
           <h3>Mission</h3>
           <p>
             Create opportunities for every talented student to <strong>earn while learning</strong>, 
-            gain real-world experience, and build their professional portfolio.
+            gain real-world experience & build their professional portfolio.
           </p>
         </div>
         <div class="mission-card vision">
