--- a/for-client.html
+++ b/for-client.html
@@ -87,7 +87,7 @@
             <i class="fas fa-brain"></i>
           </div>
           <h3>Fresh Creative Ideas</h3>
-          <p>India's brightest student freelancers bring innovative solutions & modern approaches.</p>
+          <p>India's brightest student freelancers bring innovative solutions & modern approaches to your projects.</p>
         </div>
         <div class="card feature-card">
           <div class="card-icon">
