--- a/for-client.html
+++ b/for-client.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>Hire Top Student Talent at 50% Lower Rates</h1>
-        <p>Join 10+ businesses getting professional work from Top College students at startup-friendly prices.</p>
+        <p>Join 10+ businesses getting professional work from Top College student freelancers at startup-friendly prices.</p>
         <div class="hero-buttons">
           <a href="#post-project" class="btn-primary">Post Project Free</a>
           <a href="#features" class="btn-secondary">See How It Works</a>
