--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <!-- Navbar --> 
   <header class="header"> 
     <div class="container"> 
-      <div class="logo">
+      <div class="logo">  
         <img src="_Skill Linkr Personal Logo (1).png" alt="Skill Linkr Logo">
       </div>
       <div class="menu-toggle">
@@ -108,7 +108,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Our Purpose</h2>
-        <p>Guided by clear values and ambitious goals</p>
+        <p>Guided by clear values & ambitious goals</p>
       </div>
       <div class="mission-grid">
         <div class="mission-card mission">
