--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,7 @@
         </div>
         <h1>About <span>Skill Linkr</span></h1>
         <p class="hero-subtitle">
-          Empowering students to earn, learn & grow while connecting businesses 
+          Empowering students to earn, learn and grow while connecting businesses 
           with affordable, quality talent from India's top colleges. 
         </p>
         <div class="hero-stats">
