--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <nav class="nav">
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-students.html">For Student</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
