--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
       <nav class="nav">
         <ul id="nav-menu">
           <li><a href="login.html">Home</a></li>
-          <li><a href="login.html">For Students</a></li>
+          <li><a href="login.html">For Student</a></li>
           <li><a href="login.html">For Clients</a></li>
           <li><a href="pricings.html">Pricing</a></li>
           <li><a href="contactme.html">Contact</a></li>
