--- a/for-client.html
+++ b/for-client.html
@@ -20,7 +20,7 @@
       <nav>
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="for-students.html">For Students </a></li>
+          <li><a href="for-students.html">For Student</a></li>
           <li><a href="for-clients.html" class="active">For Clients</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
