--- a/pricings.html
+++ b/pricings.html
@@ -53,7 +53,7 @@
         </div>
         <div class="stat">
           <h3>₹10K+</h3>
-          <p>Total Paid to Students</p>
+          <p>Total Paid to Student Freelancers</p>
         </div>
         <div class="stat">
           <h3>100%</h3>
