--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
           </div>
           <div class="stat">
             <div class="stat-number">₹10K+</div>
-            <div class="stat-label">Paid to Students</div>
+            <div class="stat-label">Paid to Student Freelancers</div>
           </div>
           <div class="stat">
             <div class="stat-number">100%</div>
