--- a/for-client.html
+++ b/for-client.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Clients | Skill Linkr</title>
-  <meta name="description" content="Hire talented student freelancers at affordable rates. Fast delivery, quality work & secure payments.">
+  <meta name="description" content="Hire talented student freelancers at affordable rates. Fast delivery, quality work and secure payments.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styleclient.css">
