--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skill Linkr - Student Freelancer Platform</title>
-  <meta name="description" content="Skill Linkr connects student freelancers directly with clients — fast, affordable & reliable.">
+  <meta name="description" content="Skill Linkr connects student freelancers directly with clients — fast, affordable and reliable.">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
