--- a/pricings.html
+++ b/pricings.html
@@ -22,7 +22,7 @@
           <li><a href="login.html">Home</a></li>
           <li><a href="login.html">For Students</a></li>
           <li><a href="login.html">For Clients</a></li>
-          <li><a href="pricings.html" class="active">Pricing</a></li>
+          <li><a href="pricings.html" class="active">Pricings</a></li>
           <li><a href="contactme.html">Contact</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="login.html">Log In</a></li>
