--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,7 @@
       <nav>
         <ul id="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="for-students.html">For Students</a></li>
+          <li><a href="for-students.html">For Student Freelancer</a></li>
           <li><a href="for-client.html">For Clients</a></li>
           <li><a href="pricing.html" class="active">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
