--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
       <nav class="nav">
         <ul>
           <li><a href="pricings.html">Pricing</a></li>
-          <li><a href="contactme.html">Contact</a></li>
+          <li><a href="contactme.html">Contact Us</a></li>
           <li><a href="aboutus.html">About</a></li>
         </ul>
       </nav>
