--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <li><a href="for-students.html">For Students</a></li>
         <li><a href="for-client.html">For Clients</a></li>
         <li><a href="pricing.html">Pricing</a></li>
-        <li><a href="contact.html" class="active">Contact Us</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="login.html" id="login">Log In</a></li>
       </ul>
