--- a/contactme.html
+++ b/contactme.html
@@ -25,7 +25,7 @@
           <li><a href="login.html">For Students</a></li>
           <li><a href="login.html">For Clients</a></li>
           <li><a href="pricings.html">Pricing</a></li>
-          <li><a href="contactme.html" class="active">Contact</a></li>
+          <li><a href="contactme.html" class="active">Contact Us</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="login.html" id="login">Log In</a></li>
         </ul>
