--- a/about.html
+++ b/about.html
@@ -269,7 +269,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>© 2026 Skill Linkr — Built with ❤️ by Adarsh Shukla | All rights reserved</p>
+        <p>© 2026 Skill Linkr — Built with ❤️ & Caffeine by Adarsh Shukla | All rights reserved</p>
       </div>
     </div>
   </footer>
