--- a/for-client.html
+++ b/for-client.html
@@ -73,7 +73,7 @@
             <i class="fas fa-bolt"></i>
           </div>
           <h3>Lightning Fast Delivery</h3>
-          <p>Students deliver 2-3x faster than agencies. Perfect for tight deadlines & urgent projects.</p>
+          <p>Students deliver 2-3x faster than agencies. Perfect for tight deadlines and urgent projects.</p>
         </div>
         <div class="card feature-card">
           <div class="card-icon">
