--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="for-students.html">For Students</a></li>
           <li><a href="for-client.html">For Clients</a></li>
-          <li><a href="pricing.html">Pricings</a></li>
+          <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
           <li><a href="login.html" id="log In">Log In</a></li>
