Fix loading message text in contact form button

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
           <button type="submit" class="btn btn-primary btn-large">
             <span class="btn-text">Send Message</span>
             <span class="btn-loading" aria-hidden="true">
-              <i class="fas fa-spinner fa-spin"></i> Sending...
+              <i class="fas fa-spinner fa-spin"></i> Sending....
             </span>
           </button>
 
